--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.683 2017/05/19 12:35:13 joerg Exp $
+# $NetBSD: Makefile,v 1.684 2017/06/22 11:01:05 markd Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -226,6 +226,8 @@ SUBDIR+=	tex-antomega
 SUBDIR+=	tex-antomega-doc
 SUBDIR+=	tex-anysize
 SUBDIR+=	tex-anysize-doc
+SUBDIR+=	tex-apa6
+SUBDIR+=	tex-apa6-doc
 SUBDIR+=	tex-appendix
 SUBDIR+=	tex-appendix-doc
 SUBDIR+=	tex-arabi
@@ -302,6 +304,8 @@ SUBDIR+=	tex-beton-doc
 SUBDIR+=	tex-bezos
 SUBDIR+=	tex-bezos-doc
 SUBDIR+=	tex-biblatex
+SUBDIR+=	tex-biblatex-apa
+SUBDIR+=	tex-biblatex-apa-doc
 SUBDIR+=	tex-biblatex-doc
 SUBDIR+=	tex-bibleref-german
 SUBDIR+=	tex-bibleref-german-doc
@@ -468,6 +472,8 @@ SUBDIR+=	tex-context-vim
 SUBDIR+=	tex-context-vim-doc
 SUBDIR+=	tex-context-visualcounter
 SUBDIR+=	tex-context-visualcounter-doc
+SUBDIR+=	tex-continue
+SUBDIR+=	tex-continue-doc
 SUBDIR+=	tex-cooking
 SUBDIR+=	tex-cooking-doc
 SUBDIR+=	tex-crop
@@ -491,6 +497,8 @@ SUBDIR+=	tex-curves
 SUBDIR+=	tex-curves-doc
 SUBDIR+=	tex-custom-bib
 SUBDIR+=	tex-custom-bib-doc
+SUBDIR+=	tex-cutwin
+SUBDIR+=	tex-cutwin-doc
 SUBDIR+=	tex-cweb
 SUBDIR+=	tex-cweb-doc
 SUBDIR+=	tex-cyrillic
@@ -668,6 +676,10 @@ SUBDIR+=	tex-greek-inputenc-doc
 SUBDIR+=	tex-guide-to-latex
 SUBDIR+=	tex-gustlib
 SUBDIR+=	tex-gustlib-doc
+SUBDIR+=	tex-hang
+SUBDIR+=	tex-hang-doc
+SUBDIR+=	tex-hanging
+SUBDIR+=	tex-hanging-doc
 SUBDIR+=	tex-happy4th-doc
 SUBDIR+=	tex-harvard
 SUBDIR+=	tex-harvard-doc
@@ -829,6 +841,8 @@ SUBDIR+=	tex-layouts
 SUBDIR+=	tex-layouts-doc
 SUBDIR+=	tex-lazylist
 SUBDIR+=	tex-lazylist-doc
+SUBDIR+=	tex-leading
+SUBDIR+=	tex-leading-doc
 SUBDIR+=	tex-leaflet
 SUBDIR+=	tex-leaflet-doc
 SUBDIR+=	tex-leftidx
@@ -890,6 +904,8 @@ SUBDIR+=	tex-metalogo-doc
 SUBDIR+=	tex-metapost-examples-doc
 SUBDIR+=	tex-mex
 SUBDIR+=	tex-mex-doc
+SUBDIR+=	tex-mfirstuc
+SUBDIR+=	tex-mfirstuc-doc
 SUBDIR+=	tex-mfnfss
 SUBDIR+=	tex-mfnfss-doc
 SUBDIR+=	tex-mhchem
@@ -1224,6 +1240,8 @@ SUBDIR+=	tex-textmerg-doc
 SUBDIR+=	tex-textpos
 SUBDIR+=	tex-textpos-doc
 SUBDIR+=	tex-thailatex
+SUBDIR+=	tex-thmtools
+SUBDIR+=	tex-thmtools-doc
 SUBDIR+=	tex-threeparttable
 SUBDIR+=	tex-threeparttable-doc
 SUBDIR+=	tex-thumbpdf
