--- a/meta-pkgs/texlive-collection-publishers/Makefile
+++ b/meta-pkgs/texlive-collection-publishers/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2017/06/22 09:37:23 markd Exp $
+# $NetBSD: Makefile,v 1.10 2017/06/22 11:11:23 markd Exp $
 
 DISTNAME=	collection-publishers
-PKGNAME=	texlive-${DISTNAME}-2017pre1
+PKGNAME=	texlive-${DISTNAME}-2017pre2
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 TEXLIVE_REV=	44485
@@ -28,7 +28,7 @@ DEPENDS+=	tex-acmconf-[0-9]*:../../print/tex-acmconf
 # depend anufinalexam
 # depend aomart
 # depend apa
-# depend apa6
+DEPENDS+=	tex-apa6-[0-9]*:../../print/tex-apa6
 # depend apa6e
 DEPENDS+=	tex-arsclassica-[0-9]*:../../print/tex-arsclassica
 # depend articleingud
