--- a/print/cups-filters/Makefile
+++ b/print/cups-filters/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.72 2017/06/13 14:59:48 wiz Exp $
+# $NetBSD: Makefile,v 1.73 2017/06/22 12:30:25 wiz Exp $
 
 DISTNAME=	cups-filters-1.14.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	print
 MASTER_SITES=	http://openprinting.org/download/cups-filters/
 EXTRACT_SUFX=	.tar.xz
@@ -40,10 +40,8 @@ CFLAGS+=	-framework IOKit
 BUILD_DEFS+=		VARBASE
 CONFIGURE_ARGS+=	--localstatedir=${VARBASE}
 
-.if ${INIT_SYSTEM} == "rc.d"
-CONFIGURE_ARGS+=	--with-rcdir=${PREFIX}/share/examples/rc.d
-CONFIGURE_ARGS+=	--with-rclevels=""
-.endif
+RCD_SCRIPTS=		cups-browsed
+
 CONFIGURE_ARGS+=	--disable-braille
 CONFIGURE_ARGS+=	--disable-ldap
 CONFIGURE_ARGS+=	--disable-mutool
@@ -57,11 +55,22 @@ INSTALL_MAKE_FLAGS+=	sysconfdir=${PREFIX}/share/examples/cups-filters
 CONF_FILES=		${PREFIX}/share/examples/cups-filters/fonts/conf.d/99pdftoopvp.conf ${PKG_SYSCONFDIR}/fontconfig/conf.d/99pdftoopvp.conf
 CONF_FILES+=		${PREFIX}/share/examples/cups-filters/cups-browsed.conf ${PKG_SYSCONFDIR}/cups/cups-browsed.conf
 
+post-extract:
+	${CP} ${FILESDIR}/cups-browsed-daemonize.sh ${WRKSRC}
+
+SUBST_CLASSES+=			daemonize
+SUBST_STAGE.daemonize=		pre-configure
+SUBST_MESSAGE.daemonize=	Customizing daemonizing script
+SUBST_FILES.daemonize=		cups-browsed-daemonize.sh
+SUBST_SED.daemonize=		-e 's|@PREFIX@|${PREFIX}|g'
+SUBST_SED.daemonize+=		-e 's|@VARBASE@|${VARBASE}|g'
+
 post-install:
 	${MV} ${DESTDIR}${PKG_SYSCONFDIR}/cups/cups-browsed.conf ${DESTDIR}${PREFIX}/share/examples/cups-filters/cups-browsed.conf
 	# backends that need root access should not have world read and execute permissions
 	${CHMOD} go-rwx ${DESTDIR}${PREFIX}/libexec/cups/backend/parallel
 	${CHMOD} go-rwx ${DESTDIR}${PREFIX}/libexec/cups/backend/serial
+	${INSTALL_SCRIPT} ${WRKSRC}/cups-browsed-daemonize.sh ${DESTDIR}${PREFIX}/libexec/cups-browsed
 
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
