--- a/lang/gcc49/Makefile
+++ b/lang/gcc49/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2017/06/21 21:16:35 maya Exp $
+# $NetBSD: Makefile,v 1.18 2017/06/22 21:44:49 maya Exp $
 
 GCC_PKGNAME=	gcc49
 .include	"version.mk"
@@ -25,7 +25,9 @@ EXTRACT_ONLY=		${DEFAULT_DISTFILES}
 NOT_FOR_PLATFORM=	Interix-*-*
 
 USE_LANGUAGES=		c c++
-USE_TOOLS+=		gmake makeinfo gsed
+USE_TOOLS+=		gmake makeinfo sed:run
+USE_TOOLS.NetBSD+=	gsed
+
 
 GNU_CONFIGURE=		yes
 ## Build outside ${WRKSRC}
