--- a/lang/gcc5/Makefile
+++ b/lang/gcc5/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2017/06/21 21:16:36 maya Exp $
+# $NetBSD: Makefile,v 1.19 2017/06/22 21:44:49 maya Exp $
 
 GCC_PKGNAME=		gcc5
 PKGREVISION=		3
@@ -24,7 +24,8 @@ EXTRACT_ONLY=		${DEFAULT_DISTFILES}
 NOT_FOR_PLATFORM=	Interix-*-*
 
 USE_LANGUAGES=	c c++
-USE_TOOLS+=		gmake makeinfo gsed tar:build
+USE_TOOLS+=		gmake makeinfo sed:run tar:build
+USE_TOOLS.NetBSD+=	gsed
 
 GNU_CONFIGURE=		yes
 ## Build outside ${WRKSRC}
