--- a/print/tex-texconfig/Makefile
+++ b/print/tex-texconfig/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2017/06/21 13:25:33 markd Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/23 01:56:47 markd Exp $
 
 DISTNAME=	texconfig
 PKGNAME=	tex-${DISTNAME}-2017
+PKGREVISION=	1
 TEXLIVE_REV=	44166
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
