--- a/converters/Makefile
+++ b/converters/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.154 2017/05/28 13:25:53 mef Exp $
+# $NetBSD: Makefile,v 1.155 2017/06/23 07:12:19 manu Exp $
 #
 
 COMMENT=	Document format and character code converters
@@ -127,6 +127,7 @@ SUBDIR+=	txt2pdbdoc
 SUBDIR+=	unix2dos
 SUBDIR+=	uudeview
 SUBDIR+=	uulib
+SUBDIR+=	wkhtmltopdf
 SUBDIR+=	wv
 SUBDIR+=	wv2
 SUBDIR+=	xdeview
