--- a/sysutils/caja-extensions/Makefile
+++ b/sysutils/caja-extensions/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2017/04/22 21:03:57 adam Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/23 17:08:06 youri Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	caja-extensions-${MATE_VERSION}
+DISTNAME=	caja-extensions-${VERSION:R}.1
 CATEGORIES=	sysutils
 
 COMMENT=	Set of extensions for Caja
@@ -14,7 +13,6 @@ PKGCONFIG_OVERRIDE+=	sendto/caja-sendto.pc.in
 
 .include "../../sysutils/caja/buildlink3.mk"
 .include "../../x11/mate-desktop/buildlink3.mk"
-.include "../../devel/glib2/buildlink3.mk"
 .include "../../net/gupnp/buildlink3.mk"
 .include "../../sysutils/dbus-glib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
