--- a/graphics/eom/Makefile
+++ b/graphics/eom/Makefile
@@ -1,15 +1,11 @@
-# $NetBSD: Makefile,v 1.5 2017/02/12 06:25:25 ryoon Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/23 17:10:44 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	eom-1.14.1
+DISTNAME=	eom-${VERSION:R}.2
 CATEGORIES=	graphics
 
 COMMENT=	Eye of MATE: an image viewing and cataloging program
-
-TOOL_DEPENDS+=	itstool-[0-9]*:../../textproc/itstool
-TOOL_DEPENDS+=	libxml2-[0-9]*:../../textproc/libxml2 # for xmllint
 
 PKGCONFIG_OVERRIDE+=	data/eom.pc.in
 
@@ -21,14 +17,8 @@ BUILDLINK_TRANSFORM.SunOS+=	rm:-lutil
 
 .include "../../x11/mate-desktop/buildlink3.mk"
 .include "../../databases/shared-mime-info/buildlink3.mk"
-.include "../../devel/glib2/buildlink3.mk"
+.include "../../devel/libpeas/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
-.include "../../graphics/gdk-pixbuf2/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
-.if !empty(PKG_BUILD_OPTIONS.gtk2:Mx11)
-.include "../../x11/xproto/buildlink3.mk"
-.include "../../x11/libX11/buildlink3.mk"
-.endif
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../mk/bsd.pkg.mk"
