--- a/net/powerdns/Makefile
+++ b/net/powerdns/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.26 2017/04/30 01:21:57 ryoon Exp $
+# $NetBSD: Makefile,v 1.27 2017/06/23 17:12:54 fhajny Exp $
 
 .include "Makefile.common"
 
 PKGNAME=		${DISTNAME:S/pdns/powerdns/}
-PKGREVISION=		3
 COMMENT=		Modern, advanced and high performance nameserver
 
 .include "options.mk"
