--- a/misc/libmateweather/Makefile
+++ b/misc/libmateweather/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2017/04/22 21:03:13 adam Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/23 17:12:57 youri Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	libmateweather-${MATE_VERSION}
+DISTNAME=	libmateweather-${VERSION:R}.1
 CATEGORIES=	misc
 
 COMMENT=	Weather information access library
@@ -12,8 +11,6 @@ PKGCONFIG_OVERRIDE+=	libmateweather/mateweather.pc.in
 
 .include "../../devel/glib2/schemas.mk"
 
-.include "../../devel/glib2/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../net/libsoup/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
