--- a/x11/mate-session-manager/Makefile
+++ b/x11/mate-session-manager/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2017/02/12 06:26:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/23 17:28:29 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	mate-session-manager-${MATE_VERSION}
+DISTNAME=	mate-session-manager-${VERSION}
 CATEGORIES=	x11
 
 COMMENT=	MATE session manager
@@ -11,21 +10,15 @@ COMMENT=	MATE session manager
 TOOL_DEPENDS+=	xmlto-[0-9]*:../../textproc/xmlto
 TOOL_DEPENDS+=	libxslt-[0-9]*:../../textproc/libxslt
 
+DEPENDS+=	docbook-xsl-[0-9]*:../../textproc/docbook-xsl
+
 .include "options.mk"
 
 .include "../../devel/glib2/schemas.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 
-.include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/libexecinfo/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+.include "../../sysutils/dbus/buildlink3.mk"
 .include "../../sysutils/dbus-glib/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
-.include "../../x11/libSM/buildlink3.mk"
-.include "../../x11/libICE/buildlink3.mk"
-.include "../../x11/libXext/buildlink3.mk"
-.include "../../x11/libXau/buildlink3.mk"
-.include "../../x11/libXrender/buildlink3.mk"
-.include "../../x11/xtrans/buildlink3.mk"
-.include "../../x11/libXtst/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
